--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Css-->
-    <link rel="stylesheet" href="Meusite/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Fonte-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +14,7 @@
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
        <title>João Navarro: Curriculo</title>
+
        <!-- Favicon-->
        <link rel="icon" href="Meusite/Navarroo.png">
 </head>
@@ -21,7 +22,7 @@
       <header>
           <div class="container box-flex" >
               <a href="#">
-                <img src="Meusite/imagens/Navarroo.png" class="header-logo">
+                <img src="imagens/Navarroo.png" class="header-logo">
               </a>
             
           <nav class="header-navbr">
@@ -49,7 +50,7 @@
       <section>
           <div class="flex-center container">
               <div id="imagem-sobre">
-                  <img src="Meusite/imagens/eu.jpeg" alt="Foto minha">
+                  <img src="imagens/eu.jpeg" alt="Foto minha">
 
               </div>
               <div id="sobre">
