--- a/Index.html
+++ b/Index.html
@@ -130,26 +130,9 @@
             </div>
           </div>
       </section>
-      <table class="main-table">
-          <tr>
-              <th>Primeiro|</th>
-              <th>Segundo | </th>
-              <th>Terceiro|</th>
-          </tr>
-          <tr>
-              <td>Wanda|</td>
-              <td>Vision|</td>
-              <td>Doctor|</td>
-          </tr>
-          <tr>
-              <td>23|</td>
-              <td>70|</td>
-              <td>120|</td>
-          </tr>
-      </table>
       <footer>
           <div class="container">
-              <p>Portfólio do Tido. &copy;2021</p>
+              <p>Portfólio do João Navarro. &copy;2022</p>
           </div>
           <div class="whats">
               <a href="https://web.whatsapp.com/" target="_blank">
