--- a/Index.html
+++ b/Index.html
@@ -79,11 +79,11 @@
           <div class=" gallery flex-center container ">
               <div class="flex-center gallery-card gallery-img" id="card-1">
                   <h2>Wanda</h2>
-                  <a href="file:///C:/Users/anaan/OneDrive/Documentos/Jo%C3%A3o/%C3%A9%20sobre/Aula-04/index.html#linkfalecomigo" target="_blank" class="gallery-card-btn">Ver Projeto</a>
+                  <a href="https://github.com/joaonavarro2/Wanda.git" target="_blank" class="gallery-card-btn">Ver Projeto</a>
               </div>
               <div class="flex-center gallery-card gallery-img" id="card-2">
-                   <h2>Em andamento</h2> 
-                   <a href="#" target="_blank" class="gallery-card-btn">Ver Projeto</a>
+                   <h2>Daenerys targaryen</h2> 
+                   <a href="https://github.com/joaonavarro2/Blog-Bootstrap.git" target="_blank" class="gallery-card-btn">Ver Projeto</a>
           </div>
           <div class="flex-center gallery-card gallery-img" id="card-3">
                     <h2>Em andamento</h2> 
